# ohm

./: .gitignore  CLAUDE.md  README.md  admin.decade.txt  analyze_graph.py  bad_geometry.py  boundary-viewer.config.jsonc  build_connectivity_graph.py  chrono_stats.py  collate_stats.py  colombia.py  color_graph.py  dates.py  dates_test.py  decade_coverage.py  decimaldate.py  dupe_finder.py  earth_coverage.py  extract-stats.sh  extract_admin_boundaries.py  extract_for_web.py  extract_for_web_test.py  feature_stats.py  find_by_name.py  geojson_to_osm.py  geometry.py  geometry_test.py  graph_coloring.py  index.html  main.py  ohm-preset.xml  pyproject.toml  region_era_coverage.py  stats-pipeline.sh  stats.py  update-boundary.sh  whm_gap.py  whm_to_osm.py  year_coverage.py
app/: .gitignore  README.md  index.html  knip.jsonc  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/: chart.css  chart.js  stats.csv
stats-test/: admin-1.examples.txt  admin-2.examples.txt  admin-3.examples.txt  admin-4.examples.txt  bad_geometry.summary.csv  chronology-anonymous.examples.txt  chronology-member-outside-range.examples.txt  chronology-overlapping-members.examples.txt  chronology-undated-member.examples.txt  chronology.summary.csv  date-edtf-invalid.examples.txt  date-edtf-mismatch.examples.txt  date-edtf-without-plain.examples.txt  date-end-no-start.examples.txt  date-in-name.examples.txt  date-invalid.examples.txt  double-covered-admin-2.examples.txt  double-covered-admin-3.examples.txt  double-covered-admin-4.examples.txt  dupes.summary.csv  feature.summary.csv  (+14 more)
(+63 files in other folders)
