[project]
name = "ohm"
version = "0.1.0"
description = "ohm — project scaffolded with uv"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "osmium>=4.3.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

# Keep Ruff configuration minimal here — you can extend rules or ignores later.
